--- a/index.html
+++ b/index.html
@@ -5,117 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Components Library</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Saurabh Rana's component library.</h1>
-    <p>I am doing web development and I want to make a library which would make my projects to look good and consistent.
-    </p>
-    <p>This paragraph has <strong>bold</strong> tag</p>
-
-    <hr>
-
-    <h2>@typography</h2>
-    <small>This is a small text</small>
-    <p>This is normal text</p>
-    <h2>This is second biggest hesding</h2>
-
-    <hr>
-
-    <h2>@containers</h2>
-    <h3>fluid container</h3>
-    <div class="container">This is a fluid container</div>
-    <h3>centered container</h3>
-    <div class="container center-container">This is a centered container</div>
-
-    <hr>
-
-    <h2>@links</h2>
-    <a href="/" class="link primary-link">Primary link</a>
-    <a href="/" class="link secondary-link">Secondary link</a>
-
-    <hr>
-
-    <h2>@lists</h2>
-    <h3>unordered lits</h3>
-    <ul class="list-non-bullet">
-        <li>One Item</li>
-        <li>Second Item</li>
-        <li>Third Item</li>
-    </ul>
-    <h3>unordered inline list </h3>
-    <ul class="list-non-bullet">
-        <li class="list-item-inline">inline item 1</li>
-        <li class="list-item-inline">inline item 2</li>
-        <li class="list-item-inline"></li>inline item 3</li>
-    </ul>
-
-    <h3>reverse ordered list</h3>
-    <ol reversed>
-        <li>milk</li>
-        <li>chapati</li>
-        <li>rice</li>
-    </ol>
-
-    <hr>
-
-    <h3>@nav</h3>
     <nav class="navigation container">
-        <div class="nav-brand"> iAmBrand</div>
+        <div class="nav-brand">Saurabh Rana</div>
         <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline"><a class="link link-active" href="/">home</a></li>
-            <li class="list-item-inline"><a class="link" href="/">product</a></li>
-            <li class="list-item-inline"><a class="link" href="/">about</a></li>
+            <li class="list-item-inline"><a class="link link-active" href="/">Home</a></li>
+            <li class="list-item-inline"><a class="link" href="/projects.html">Projects</a></li>
+            <li class="list-item-inline"><a class="link" href="/blogs.html">Blogs</a></li>
 
         </ul>
-
     </nav>
 
-    <hr>
-
-    <h2>@header</h2>
     <header class="hero">
         <img class="hero-img" src="\images\hero.svg" alt="" />
-        <h1 class="hero-heading">heading <span class="heading-inverted">inside hero</span></h1>
+        <h1 class="hero-heading"><span class="heading-inverted">Saurabh Rana</span>
+        </h1>
+        <p id="designation" class="about-hero">(Web Developer, Content Writer)</p>
     </header>
 
-    <hr>
+    <div class="container center-container">
+        <section class="section ow">
+            <h1>Technologies</h1>
+            <p>I am familiar with Html, CSS, Java Script, Node Js, C, Java</p>
+        </section>
+    </div>
 
-    <h2>@section</h2>
     <div class="container center-container">
         <section class="section">
-            <h1>white section</h1>
-            <p>this will have white background</p>
+            <h1>Projects</h1>
+            <p>I would like to showcase my work and thus you can see my projects online.</p>
+            <a href="/projects.html" class="link primary-link">See Projects</a>
         </section>
     </div>
 
     <div class="container center-container">
         <section class="section ow">
-            <h1>off white</h1>
-            <p>this will have gray background</p>
+            <h1>Blogs</h1>
+            <p>I am also working on some non technical blogs.</p>
+            <a href="/blogs.html" class="link secondary-link">See Blogs</a>
         </section>
     </div>
 
-
-    <hr>
-
-    <h2>@footer</h2>
     <footer class="footer">
-        <div class="footer-header">some small heading inside footer</div>
+        <div class="footer-header">Social Media presence</div>
         <ul class="social-links list-non-bullet">
-            <li class="list-item-inline"> <a class="link" href="/">socialone</a> </li>
-            <li class="list-item-inline"> <a class="link" href="/">socialtwo</a> </li>
-            <li class="list-item-inline"> <a class="link" href="/">socialthree</a> </li>
+            <li class="list-item-inline"> <a class="link" href="https://github.com/Saurabhrana2290">github</a> </li>
+            <li class="list-item-inline"> <a class="link" href="https://www.linkedin.com/in/saurabh-rana-472425197/">linkedIn</a> </li>
+            <li class="list-item-inline"> <a class="link" href="/">twitter</a> </li>
         </ul>
     </footer>
-
-
-
-    <!-- <div style="height: 30vh;">
-
-    </div> -->
 </body>
 
 </html>
